fix: change body to path param
